@@ -1,3 +1,8 @@
+2007-11-08 Stéphane Charette <stephanecharette@gmail.com>
+	* src/DataViews/_RelationView.py: issue #1352
+	* src/GrampsWidgets.py: issue #1352, include all siblings in
+	relationship view, but make current person non-linkable
+
 2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/AddMedia.py: fix issue #1350, relative path not working addmedia
 	* src/Editors/_EditPerson.py: family rebuild callback error
